k8s config/ping-directory/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: likeminds
    app.kubernetes.io/name: pingdirectory
  name: likeminds-pingdirectory
spec:
  podManagementPolicy: OrderedReady
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: likeminds
      app.kubernetes.io/name: pingdirectory
  serviceName: likeminds-pingdirectory-cluster
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: likeminds
        app.kubernetes.io/name: pingdirectory
        clusterIdentifier: likeminds-pingdirectory
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - pingdirectory
            topologyKey: kubernetes.io/hostname
      containers:
      - envFrom:
        - configMapRef:
            name: likeminds-global-env-vars
            optional: true
        - configMapRef:
            name: likeminds-env-vars
            optional: true
        - configMapRef:
            name: likeminds-pingdirectory-env-vars
        - secretRef:
            name: devops-secret
            optional: true
        - secretRef:
            name: likeminds-pingdirectory-git-secret
            optional: true
        image: pingidentity/pingdirectory:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /opt/liveness.sh
          failureThreshold: 4
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: pingdirectory
        ports:
        - containerPort: 1443
          name: https
        - containerPort: 1389
          name: ldap
        - containerPort: 1636
          name: ldaps
        readinessProbe:
          exec:
            command:
            - /opt/readiness.sh
          failureThreshold: 4
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2
            memory: 8Gi
          requests:
            cpu: 50m
            memory: 2Gi
        startupProbe:
          exec:
            command:
            - /opt/liveness.sh
          failureThreshold: 180
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /opt/out
          name: out-dir
      enableServiceLinks: true
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 9031
      terminationGracePeriodSeconds: 300
      volumes:
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
