k8s config/ping-directory/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/instance: likeminds
    app.kubernetes.io/name: pingdirectory
  name: likeminds-pingdirectory-cluster
spec:
  clusterIP: None
  ports:
  - name: ldaps
    port: 1636
    protocol: TCP
  publishNotReadyAddresses: true
  selector:
    clusterIdentifier: likeminds-pingdirectory
  type: ClusterIP
