k8s config/ping-directory/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: likeminds
    app.kubernetes.io/name: pingdirectory
  name: likeminds-pingdirectory
spec:
  ports:
  - name: https
    port: 1443
    protocol: TCP
    targetPort: 1443
  - name: ldap
    port: 1389
    protocol: TCP
    targetPort: 1389
  - name: ldaps
    port: 1636
    protocol: TCP
    targetPort: 1636
  selector:
    app.kubernetes.io/instance: likeminds
    app.kubernetes.io/name: pingdirectory
  type: LoadBalancer
